// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes password 1`] = `
Object {
  "data": Object {
    "tvHelperChangePassword": Object {
      "__typename": "ChangePasswordResponse",
      "success": true,
    },
  },
}
`;

exports[`returns error type for wrong password 1`] = `
Object {
  "data": Object {
    "tvHelperChangePassword": Object {
      "__typename": "ChangePasswordError",
      "isInvalidPassword": true,
      "message": "Wrong password",
    },
  },
}
`;
